2020-06-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* imgui/GetGlyphRangesJapanese_standalone.cpp.template: Removed wrong comment

2020-06-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated comments

2020-05-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* initial commmit
	* Added ImGui GetGlyphRangesJapanese implementation
