@@ -6,11 +6,11 @@
 require 'csv'
 
 if __FILE__ == $PROGRAM_NAME
-  regular_use = CSV.read("../regular_use.csv")
-  regular_use_force_2byte = CSV.read("../regular_use_force_2byte.csv")
-  personal_name = CSV.read("../personal_name.csv")
+  regular_use = CSV.read("../regular_use_utf8.csv")
+  regular_use_force_2byte_codepoint = CSV.read("../regular_use_force_2byte_codepoint_utf8.csv")
+  personal_name = CSV.read("../personal_name_utf8.csv")
 
-  File.open("../regular_use+personal_name.txt", "w") do |dst_file|
+  File.open("../regular_use+personal_name_utf8.txt", "w") do |dst_file|
     regular_use.each do |entry| # entry == [index, character]
       dst_file << entry[1]
     end
@@ -19,8 +19,8 @@ if __FILE__ == $PROGRAM_NAME
     end
   end
 
-  File.open("../regular_use_force_2byte+personal_name.txt", "w") do |dst_file|
-    regular_use_force_2byte.each do |entry| # entry == [index, character]
+  File.open("../regular_use_force_2byte_codepoint+personal_name_utf8.txt", "w") do |dst_file|
+    regular_use_force_2byte_codepoint.each do |entry| # entry == [index, character]
       dst_file << entry[1]
     end
     personal_name.each do |entry| # entry == [index, character]
